--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alibi Architect</title>
+    <title>Excuse Generator</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -11,7 +11,7 @@
 
     <div class="bg-white p-8 rounded-3xl shadow-2xl max-w-lg w-full text-center space-y-6">
 
-        <h1 class="text-4xl font-bold text-gray-800 tracking-tight">Alibi Architect</h1>
+        <h1 class="text-4xl font-bold text-gray-800 tracking-tight">Excuse Generator</h1>
         <p class="text-gray-500 text-lg">
             Create your perfect, absurd excuse!
             <br>
@@ -41,7 +41,7 @@
             id="generate-button"
             class="w-full bg-purple-600 hover:bg-purple-700 text-white font-bold py-3 px-6 rounded-xl transition-all duration-200 shadow-md transform hover:scale-105 disabled:bg-gray-400 disabled:cursor-not-allowed"
         >
-            Generate Alibi
+            Generate Your Perfect Excuse
         </button>
 
         <div id="output-container" class="mt-8 p-6 bg-purple-50 rounded-xl border border-dashed border-purple-200 text-gray-800 text-lg italic hidden">
